# html-to-markdown

./: .gh-actions-updater.toml  .gitattributes  .gitignore  .lintr  .oxlintrc.json  .pre-commit-config.yaml  .prettierignore  .rumdl.toml  .textlintrc.json  .typos.toml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  Package.swift  README.md  SECURITY.md  Taskfile.yaml  _typos.toml  alef.toml  analysis_options.yaml  composer.json  config.m4  deny.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  poly.toml  pyproject.toml  tsconfig.base.json  tsconfig.json  zensical.toml
.ai-rulez/: .generated-manifest.json  config.toml
.ai-rulez/rules/: alef-generated-bindings.md
.github/: copilot-instructions.md  dependabot.yaml
.github/workflows/: ci-docs.yaml  ci-e2e.yaml  ci-lint.yaml  ci-rust.yaml  ci.yaml  deploy-docs.yaml  publish-pubdev.yaml  publish.yaml  validate-issues.yml  validate-pr.yml
.task/: README.md
.task/config/: platforms.yml  vars.yml
.task/languages/: csharp.yml  dart.yml  elixir.yml  go.yml  java.yml  kotlin_android.yml  node.yml  php.yml  python.yml  ruby.yml  rust.yml  swift.yml  zig.yml
.task/tools/: docs.yml  general.yml  generate.yml  version-sync.yml
.task/workflows/: benchmark.yml  e2e.yml
cli-proxy/npm/: install.js  package.json
cli-proxy/pypi/: README.md  pyproject.toml
crates/html-to-markdown/: Cargo.toml  README.md
crates/html-to-markdown-cli/: Cargo.toml
crates/html-to-markdown-ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/html-to-markdown-jni/: Cargo.toml
crates/html-to-markdown-node/: Cargo.toml  README.md  index.d.ts  index.js  package.json
crates/html-to-markdown-node/npm/darwin-arm64/: README.md  package.json
crates/html-to-markdown-node/npm/darwin-x64/: README.md  package.json
crates/html-to-markdown-node/npm/linux-arm-gnueabihf/: README.md  package.json
crates/html-to-markdown-node/npm/linux-arm64-gnu/: README.md  package.json
crates/html-to-markdown-node/npm/linux-arm64-musl/: README.md  package.json
crates/html-to-markdown-node/npm/linux-x64-gnu/: README.md  package.json
crates/html-to-markdown-node/npm/linux-x64-musl/: README.md  package.json
crates/html-to-markdown-node/npm/win32-arm64-msvc/: README.md  package.json
crates/html-to-markdown-node/npm/win32-x64-msvc/: README.md  package.json
crates/html-to-markdown-node/src/: lib.rs
crates/html-to-markdown-php/: Cargo.toml
crates/html-to-markdown-php/src/: composer.json  lib.rs
crates/html-to-markdown-py/: Cargo.toml
crates/html-to-markdown-rs-jni/: Cargo.toml
crates/html-to-markdown-wasm/: Cargo.toml  README.md  debug_test.mjs  package.json
docs/: agent-skills.md  api-reference.md  architecture.md  cli.md  configuration.md  contributing.md  ecosystem.md  errors.md  index.md  installation.md  language-guides.md  llms.txt  migration.md  tables.md  usage.md  visitor.md
docs-site/: astro.config.mjs  package.json
docs/concepts/: architecture.md  plugin-system.md
docs/css/: extra.css
docs/demo/: html_to_markdown_wasm.js  index.html  script.js  style.css
docs/overrides/: main.html
docs/reference/: api-c.md  api-csharp.md  api-dart.md  api-elixir.md  api-go.md  api-java.md  api-kotlin-android.md  api-r.md  (+13 more)
readme_templates/: language_package.md  root.md  rust.md
scripts/: prepare_wheel.py  readme_config.yaml
test_apps/: README.md
(+794 files in other folders)
