[package]
name = "html-to-markdown-node"
version = "3.5.0"
edition = "2024"
license = "MIT"
description = "High-performance HTML to Markdown converter"
readme = false
keywords = ["html", "markdown", "converter"]
categories = ["text-processing"]

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1"
html-to-markdown-rs = { path = "../html-to-markdown", features = [
  "full",
  "metadata",
  "visitor",
  "serde",
  "inline-images",
] }
napi = { version = "3", features = ["async"] }
napi-derive = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
napi-build = "2"
