[package]
name = "html-to-markdown-php"
version = "3.5.3"
edition = "2024"
license = "MIT"
description = "High-performance HTML to Markdown converter"
readme = false
keywords = ["html", "markdown", "converter"]
categories = ["text-processing"]

[lib]
crate-type = ["cdylib"]

[dependencies]
html-to-markdown-rs = { version = "3.5.3", path = "../html-to-markdown", features = ["full", "metadata", "visitor", "serde", "inline-images"] }
ext-php-rs = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# `ahash` and `futures-util` are conditionally included but not directly used in PHP code.
[package.metadata.cargo-machete]
ignored = ["tokio", "ahash", "async-trait"]

[features]
extension-module = []
